--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -53,6 +53,7 @@ jobs:
                         - pytest.ini
                         # Make sure we run if someone is explicitly change the workflow
                         - .github/workflows/ci-backend.yml
+                        - .github/workflows/backend-tests-action/action.yml
 
     backend-code-quality:
         needs: changes
