--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -119,6 +119,34 @@ jobs:
 
         steps:
             - uses: actions/checkout@v1
+
+            - name: Set up Python
+              uses: actions/setup-python@v2
+              with:
+                  python-version: ${{ inputs.python-version }}
+
+            - name: Install SAML (python3-saml) dependencies (not required for Cloud or FOSS)
+              if: ${{ inputs.saml }}
+              shell: bash
+              run: |
+                  sudo apt-get update
+                  sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
+
+            - uses: syphar/restore-virtualenv@v1.2
+              id: cache-backend-tests
+              with:
+                  custom_cache_key_element: v1-${{ inputs.cache-id }}
+
+            - uses: syphar/restore-pip-download-cache@v1
+              if: steps.cache-backend-tests.outputs.cache-hit != 'true'
+
+            - name: Install python dependencies
+              if: steps.cache-backend-tests.outputs.cache-hit != 'true'
+              shell: bash
+              run: |
+                  python -m pip install -r requirements-dev.txt
+                  python -m pip install -r requirements.txt
+
             - name: Check migrations
               shell: bash
               run: |
