--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -1,3 +1,7 @@
+# This workflow runs all of our backend django tests.
+#
+# If these tests get too slow, look at increasing concurrency and re-timing the tests by manually dispatching
+# .github/workflows/ci-backend-update-test-timing.yml action
 name: Backend CI
 
 on:
@@ -5,6 +9,12 @@ on:
         branches:
             - master
     pull_request:
+    workflow_dispatch:
+        inputs:
+            clickhouseServerVersion:
+                description: ClickHouse server version. Leave blank for default
+                type: string
+
 env:
     SECRET_KEY: '6b01eee4f945ca25045b5aab440b953461faf08693a9abbf1166dc7c6b9772da' # unsafe - for testing only
     DATABASE_URL: 'postgres://posthog:posthog@localhost:5432/posthog'
@@ -14,6 +24,7 @@ env:
     CLICKHOUSE_VERIFY: 'False'
     SAML_DISABLED: 1
     TEST: 1
+    CLICKHOUSE_SERVER_IMAGE_VERSION: ${{ github.event.inputs.clickhouseServerVersion || '' }}
 
 jobs:
     # Job to decide if we should run backend ci
@@ -47,13 +58,14 @@ jobs:
                         - pytest.ini
                         # Make sure we run if someone is explicitly change the workflow
                         - .github/workflows/ci-backend.yml
+                        - .github/workflows/backend-tests-action/action.yml
 
     backend-code-quality:
         needs: changes
         # Make sure we only run on backend changes
         if: ${{ needs.changes.outputs.backend == 'true' && github.repository == 'PostHog/posthog' }}
 
-        name: Code quality checks
+        name: Python code quality checks
         runs-on: ubuntu-latest
 
         services:
@@ -67,7 +79,7 @@ jobs:
                 options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
         steps:
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v2
               with:
                   fetch-depth: 1
 
@@ -103,9 +115,52 @@ jobs:
               run: |
                   mypy .
 
-    django:
+    check-migrations:
         needs: changes
         if: ${{ needs.changes.outputs.backend == 'true' && github.repository == 'PostHog/posthog' }}
+
+        name: Validate django migrations
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v2
+
+            - name: Start stack with Docker Compose
+              run: |
+                  docker-compose -f docker-compose.dev.yml down
+                  docker-compose -f docker-compose.dev.yml up -d db &
+
+            - name: Set up Python
+              uses: actions/setup-python@v2
+              with:
+                  python-version: 3.8.5
+
+            - uses: syphar/restore-virtualenv@v1.2
+              id: cache-backend-tests
+              with:
+                  custom_cache_key_element: v1-
+
+            - uses: syphar/restore-pip-download-cache@v1
+              if: steps.cache-backend-tests.outputs.cache-hit != 'true'
+
+            - name: Install python dependencies
+              if: steps.cache-backend-tests.outputs.cache-hit != 'true'
+              run: |
+                  python -m pip install -r requirements-dev.txt
+                  python -m pip install -r requirements.txt
+
+            - name: Check migrations
+              run: |
+                  python manage.py makemigrations --check --dry-run
+                  git fetch origin master
+                  # `git diff --name-only` returns a list of files that were changed - added OR deleted OR modified
+                  # With `--name-status` we get the same, but including a column for status, respectively: A, D, M
+                  # In this check we exclusively care about files that were added (A) in posthog/migrations/
+                  git diff --name-status origin/master..HEAD | grep "A\tposthog/migrations/" | awk '{print $2}' | python manage.py test_migrations_are_null
+
+    django:
+        needs: changes
+        if: ${{ needs.changes.outputs.backend == 'true' && github.repository == 'PostHog/posthog' || github.event_name == 'workflow_dispatch' }}
 
         name: Django tests – Py ${{ matrix.python-version }} ${{ matrix.name }} (${{matrix.group}}/${{ matrix.concurrency }})
         runs-on: ubuntu-latest
@@ -147,105 +202,19 @@ jobs:
                       concurrency: 1
                       group: 1
         steps:
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v2
               with:
                   fetch-depth: 1
 
-            - name: Start stack with Docker Compose
-              run: |
-                  docker-compose -f docker-compose.dev.yml down
-                  docker-compose -f docker-compose.dev.yml up -d db clickhouse zookeeper kafka redis &
-
-            - name: Set up Python
-              uses: actions/setup-python@v2
+            - uses: ./.github/actions/run-backend-tests
               with:
+                  cache-id: ${{ matrix.name }}
                   python-version: ${{ matrix.python-version }}
-
-            - name: Install SAML (python3-saml) dependencies (not required for Cloud or FOSS)
-              if: ${{ matrix.saml }}
-              run: |
-                  sudo apt-get update
-                  sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
-
-            - uses: syphar/restore-virtualenv@v1.2
-              id: cache-backend-tests
-              with:
-                  custom_cache_key_element: v1-${{ matrix.name }}
-
-            - uses: syphar/restore-pip-download-cache@v1
-              if: steps.cache-backend-tests.outputs.cache-hit != 'true'
-
-            - name: Install python dependencies
-              if: steps.cache-backend-tests.outputs.cache-hit != 'true'
-              run: |
-                  python -m pip install -r requirements-dev.txt
-                  python -m pip install -r requirements.txt
-
-            - name: Install SAML python dependencies
-              if: ${{ matrix.saml }}
-              run: |
-                  python -m pip install python3-saml==1.12.0
-
-            - name: Check migrations
-              run: |
-                  python manage.py makemigrations --check --dry-run
-                  git fetch origin master
-                  # `git diff --name-only` returns a list of files that were changed - added OR deleted OR modified
-                  # With `--name-status` we get the same, but including a column for status, respectively: A, D, M
-                  # In this check we exclusively care about files that were added (A) in posthog/migrations/
-                  git diff --name-status origin/master..HEAD | grep "A\tposthog/migrations/" | awk '{print $2}' | python manage.py test_migrations_are_null
-
-            - name: Add kafka host to /etc/hosts for kafka connectivity
-              run: sudo echo "127.0.0.1 kafka" | sudo tee -a /etc/hosts
-
-            - name: Set up needed files
-              run: |
-                  mkdir -p frontend/dist
-                  touch frontend/dist/index.html
-                  touch frontend/dist/layout.html
-                  touch frontend/dist/shared_dashboard.html
-
-            - name: Wait for Clickhouse & Kafka
-              run: bin/check_kafka_clickhouse_up
-
-            - name: Run FOSS tests
-              if: ${{ matrix.foss }}
-              run: |
-                  pytest -m "not ee" posthog/ --cov  --cov-report=xml:coverage-postgres.xml
-
-            - name: Run SAML tests
-              if: ${{ matrix.saml }}
-              run: |
-                  pytest ee -m "saml_only"
-
-            - name: Run ee/ tests
-              if: ${{ matrix.ee }}
-              run: |
-                  pytest ee -m "not saml_only" \
-                      --splits ${{ matrix.concurrency }} \
-                      --group ${{ matrix.group }} \
-                      --store-durations \
-                      --cov \
-                      --cov-report=xml:coverage-clickhouse.xml
-
-            - name: Run pytest.mark.ee tests
-              if: ${{ matrix.ee && matrix.group == '1' }}
-              run: |
-                  pytest posthog -m "ee"
-
-            - uses: codecov/codecov-action@v2
-              if: ${{ !matrix.saml && !matrix.cloud }}
-              with:
-                  files: ./coverage-postgres.xml,./coverage-clickhouse.xml
-                  fail_ci_if_error: false
-                  verbose: true
-
-            - name: Upload updated timing data as artifacts
-              uses: actions/upload-artifact@v2
-              if: ${{ matrix.ee }}
-              with:
-                  name: timing_data-${{ matrix.group }}
-                  path: .test_durations
+                  ee: ${{ matrix.ee }}
+                  foss: ${{ matrix.foss }}
+                  saml: ${{ matrix.saml }}
+                  concurrency: ${{ matrix.concurrency }}
+                  group: ${{ matrix.group }}
 
     cloud:
         needs: changes
