--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ defusedxml==0.6.0
     #   social-auth-core
 dj-database-url==0.5.0
     # via -r requirements.in
-django-axes==5.9.0
+django-axes==5.31.0
     # via -r requirements.in
 django-constance==2.8.0
     # via -r requirements.in
@@ -125,6 +125,8 @@ idna==2.8
     #   requests
 importlib-metadata==1.6.0
     # via -r requirements.in
+importlib-resources==5.4.0
+    # via jsonschema
 git+https://github.com/PostHog/infi.clickhouse_orm@6e2e2b7d12d70921139902e2f2d38ccd169ae40b
     # via -r requirements.in
 inflection==0.5.1
@@ -254,7 +256,9 @@ vine==1.3.0
 whitenoise==5.2.0
     # via -r requirements.in
 zipp==3.1.0
-    # via importlib-metadata
+    # via
+    #   importlib-metadata
+    #   importlib-resources
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
