--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "scripts": {
         "copy-scripts": "mkdir -p frontend/dist/ && yarn copy-scripts:array && yarn copy-scripts:recorder",
         "copy-scripts:array": "cp node_modules/posthog-js/dist/array.js* frontend/dist/",
-        "copy-scripts:recorder": "cp node_modules/rrweb/dist/rrweb.min.js frontend/dist/recorder.js && cp node_modules/rrweb/dist/rrweb.min.js.map frontend/dist/recorder.js.map && sed -i -e s/rrweb.min.js.map/recorder.js.map/ frontend/dist/recorder.js",
+        "copy-scripts:recorder": "cp node_modules/rrweb/dist/record/rrweb-record.min.js frontend/dist/recorder.js && cp node_modules/rrweb/dist/record/rrweb-record.min.js.map frontend/dist/recorder.js.map && cat node_modules/rrweb/dist/plugins/console-record.min.js >> frontend/dist/recorder.js && sed -i -e s/rrweb-record.min.js.map/recorder.js.map/ frontend/dist/recorder.js && sed -i '' -e 's/\\/\\/\\# sourceMappingURL=recorder/window.rrweb = {record: rrwebRecord}\\n\\/\\/# sourceMappingURL=recorder/g' frontend/dist/recorder.js",
         "test": "jest",
         "start": "concurrently -n ESBUILD,TYPEGEN -c yellow,green \"yarn start-http\" \"yarn run typegen:watch\"",
         "start-http": "yarn start-http:esbuild",
@@ -120,7 +120,7 @@
         "redux": "^4.0.5",
         "reselect": "^4.0.0",
         "resize-observer-polyfill": "^1.5.1",
-        "rrweb": "^1.0.6",
+        "rrweb": "^1.1.2",
         "sass": "^1.26.2",
         "use-debounce": "^6.0.1",
         "use-resize-observer": "^8.0.0",
