--- a/.github/workflows/docker-image-test.yml
+++ b/.github/workflows/docker-image-test.yml
@@ -17,12 +17,19 @@ jobs:
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v1
+            
+            - name: Login to DockerHub
+              if: github.repository == 'PostHog/posthog'
+              uses: docker/login-action@v1
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Build
               id: docker_build
               uses: docker/build-push-action@v2
               with:
-                  push: false
+                  push: true
                   tags: posthog/posthog:testing
 
     saml:
