Use tmp directory to run deploy

--- a/.github/workflows/ci-hobby-deploy.yml
+++ b/.github/workflows/ci-hobby-deploy.yml
@@ -28,13 +28,18 @@ jobs:
             repository: 'posthog/charts-clickhouse' 
             path: 'ci/'
 
+      - name: Change into temp directory
+        run: |
+            mkdir tmp 
+            cd tmp 
+
       - name: Execute the hobby script 
-        run: printf "n\n$POSTHOG_API_ADDRESS\n\n" | ./bin/deploy-hobby 
+        run: printf "n\n$POSTHOG_API_ADDRESS\n\n" | ../bin/deploy-hobby 
 
       - name: Setup PostHog for the ingestion test
-        run: ./ci/setup_ingestion_test.sh
+        run: ../ci/setup_ingestion_test.sh
 
       - name: Run ingestion test using k6
         uses: k6io/action@v0.2.0
         with:
-          filename: ci/k6/ingestion-test.js
+          filename: ../ci/k6/ingestion-test.js
