--- a/.github/workflows/ci-hobby-deploy.yml
+++ b/.github/workflows/ci-hobby-deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Execute the hobby script 
         run: |
             cd tmp
-            printf "n\n$POSTHOG_API_ADDRESS\n\n" | ../bin/deploy-hobby 
+            printf "n\n$POSTHOG_API_HOST\n\n" | ../bin/deploy-hobby 
 
       - name: Test health endpoint
         run: |
