--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
     lint-pr:
-        name: Validate PR title
+        name: Validate PR title against Conventional Commits
         runs-on: ubuntu-latest
         steps:
             - uses: amannn/action-semantic-pull-request@v4
