--- a/docker-compose.hobby.yml
+++ b/docker-compose.hobby.yml
@@ -16,7 +16,11 @@ services:
         ports:
             - '6379:6379'
     clickhouse:
-        image: yandex/clickhouse-server:21.11.11.1
+        #
+        # Note: please keep the default version in sync across
+        #       `posthog` and the `charts-clickhouse` repos
+        #
+        image: yandex/clickhouse-server:${CLICKHOUSE_SERVER_IMAGE_VERSION:-21.11.11.1}
         restart: on-failure
         depends_on:
             - kafka
