--- a/docker-compose.arm64.yml
+++ b/docker-compose.arm64.yml
@@ -22,7 +22,7 @@ services:
         # Note: please keep the default version in sync across
         #       `posthog` and the `charts-clickhouse` repos
         #
-        image: posthog/clickhouse-server:${CLICKHOUSE_SERVER_IMAGE_VERSION:-21.11.11.1}
+        image: posthog/clickhouse:${CLICKHOUSE_SERVER_IMAGE_VERSION:-v21.11.11.1-stable}
         depends_on:
             - kafka
             - zookeeper
