--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -49,7 +49,11 @@ services:
             - '6379:6379'
 
     clickhouse:
-        image: yandex/clickhouse-server:21.11.11.1
+        #
+        # Note: please keep the default version in sync across
+        #       `posthog` and the `charts-clickhouse` repos
+        #
+        image: yandex/clickhouse-server:${CLICKHOUSE_SERVER_IMAGE_VERSION:-21.11.11.1}
         ports:
             - '8123:8123'
             - '9000:9000'
