--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "@posthog/simmerjs": "0.7.4",
         "@react-hook/size": "^2.1.2",
         "@sentry/browser": "^6.11.0",
+        "@sentry/react": "^6.18.1",
         "@types/d3-sankey": "^0.11.2",
         "@types/md5": "^2.3.0",
         "@types/react-input-autosize": "^2.2.1",
