--- a/package.json
+++ b/package.json
@@ -135,10 +135,10 @@
         "@babel/preset-env": "7.10.4",
         "@babel/preset-typescript": "^7.10.4",
         "@hot-loader/react-dom": "^16.13.0",
-        "@storybook/addon-actions": "^6.3.11",
-        "@storybook/addon-essentials": "^6.3.11",
-        "@storybook/addon-links": "^6.3.11",
-        "@storybook/react": "^6.3.11",
+        "@storybook/addon-actions": "^6.4.19",
+        "@storybook/addon-essentials": "^6.4.19",
+        "@storybook/addon-links": "^6.4.19",
+        "@storybook/react": "^6.4.19",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "@types/chart.js": "^2.9.34",
@@ -174,6 +174,7 @@
         "eslint-plugin-cypress": "^2.11.2",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.20.3",
+        "eslint-plugin-storybook": "^0.5.7",
         "express": "^4.17.1",
         "file-loader": "^6.1.0",
         "fs-extra": "^10.0.0",
