storybook esbuild optimizations

--- a/package.json
+++ b/package.json
@@ -166,9 +166,9 @@
         "cors": "^2.8.5",
         "css-loader": "^3.4.2",
         "cssnano": "^4.1.10",
-        "esbuild": "^0.13.10",
-        "esbuild-plugin-less": "^1.1.5",
-        "esbuild-sass-plugin": "^1.7.0",
+        "esbuild": "^0.14.25",
+        "esbuild-plugin-less": "^1.1.6",
+        "esbuild-sass-plugin": "^1.8.2",
         "eslint": "^7.8.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-cypress": "^2.11.2",
@@ -196,6 +196,7 @@
         "raw-loader": "^4.0.2",
         "sass-extended-importer": "^0.4.2",
         "sass-loader": "^10.0.1",
+        "storybook-addon-turbo-build": "^1.0.1",
         "style-loader": "^2.0.0",
         "timekeeper": "^2.2.0",
         "ts-node": "^9.1.1",
