--- a/docker-compose.hobby.yml
+++ b/docker-compose.hobby.yml
@@ -45,7 +45,7 @@ services:
             KAFKA_ADVERTISED_HOST_NAME: kafka
             KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     worker: &worker
-        image: posthog/posthog:latest
+        image: posthog/posthog:latest-release
         command: ./bin/docker-worker-celery --with-scheduler
         restart: on-failure
         environment:
