feat: show active recordings on the live page

--- a/docker/livestream/configs-dev.yml
+++ b/docker/livestream/configs-dev.yml
@@ -3,6 +3,7 @@ kafka:
     brokers: 'kafka:9092'
     topic: 'events_plugin_ingestion'
     group_id: 'livestream-dev'
+    session_recording_enabled: true
 mmdb:
     path: 'GeoLite2-City.mmdb'
 jwt:
