--- a/rust/capture/Cargo.toml
+++ b/rust/capture/Cargo.toml
@@ -18,6 +18,7 @@ envconfig = { workspace = true }
 flate2 = { workspace = true }
 health = { path = "../common/health" }
 common-alloc = { path = "../common/alloc" }
+common-continuous-profiling = { path = "../common/continuous_profiling" }
 common-redis = { path = "../common/redis" }
 common-types = { path = "../common/types" }
 limiters = { path = "../common/limiters" }
@@ -50,6 +51,7 @@ futures = { workspace = true }
 
 [dev-dependencies]
 assert-json-diff = { workspace = true }
+common-continuous-profiling = { path = "../common/continuous_profiling" }
 anyhow = { workspace = true }
 axum-test-helper = { git = "https://github.com/posthog/axum-test-helper.git" }
 futures = { workspace = true }
