--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ dependencies = [
     "pymysql==1.1.1",
     "pymongo==4.13.2",
     "pyodbc==5.1.0",
+    "pyroscope-io>=0.8.8",
     "python-dateutil>=2.8.2",
     "python-snappy~=0.7.3",
     "python3-saml==1.16.0",
