--- a/docker-compose.dev-minimal.yml
+++ b/docker-compose.dev-minimal.yml
@@ -47,6 +47,8 @@ services:
                     @webhooks {
                         path /public/webhooks
                         path /public/webhooks/*
+                        path /public/short_links
+                        path /public/short_links/*
                         path /public/m/
                         path /public/m/*
                     }
