--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -48,6 +48,8 @@ services:
                     @webhooks {
                         path /public/webhooks
                         path /public/webhooks/*
+                        path /public/short_links
+                        path /public/short_links/*
                         path /public/m
                         path /public/m/*
                     }
