--- a/products/synthetic_users/package.json
+++ b/products/synthetic_users/package.json
@@ -4,7 +4,8 @@
     "dependencies": {
         "kea": "^3.1.7",
         "kea-loaders": "^3.1.1",
-        "kea-router": "^3.4.1"
+        "kea-router": "^3.4.1",
+        "kea-forms": "^3.2.0"
     },
     "peerDependencies": {
         "@posthog/icons": "*",
