fix(ci-hobby): use HTTP health check and preserve droplets for debugging
Switch health check from HTTPS to direct HTTP via IP address to avoid DNS resolution and TLS certificate issues during CI testing.

Comment out droplet cleanup step to allow debugging of failed deployments.

--- a/.github/workflows/ci-hobby.yml
+++ b/.github/workflows/ci-hobby.yml
@@ -70,11 +70,11 @@ jobs:
                       /tmp/droplet_info.txt
                       /tmp/docker-compose-logs.txt
                   if-no-files-found: warn
-            - name: Post-cleanup step
-              if: always()
-              run: python3 bin/hobby-ci.py destroy
-              env:
-                  DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
+            # - name: Post-cleanup step
+            #   if: always()
+            #   run: python3 bin/hobby-ci.py destroy
+            #   env:
+            #       DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
             - name: Check test result
               if: always()
               run: |
