fix(docker): remove uv cache mount to fix xmlsec version mismatch
The BuildKit cache mount was persisting wheels compiled against a
different libxmlsec1 version across builds. Removing the cache mount
ensures xmlsec is always compiled fresh against the container's
system libraries.

Fixes the issue introduced in #42124.

--- a/Dockerfile.ai-evals
+++ b/Dockerfile.ai-evals
@@ -35,9 +35,8 @@ RUN apt-get update && \
     && \
     rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies using cache mount for faster rebuilds
-RUN --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,source=uv.lock,target=uv.lock \
+# Install Python dependencies using bind mounts for better layer caching
+RUN --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
     uv sync --locked --no-install-project --no-binary-package lxml --no-binary-package xmlsec
 
