--- a/rust/kafka-deduplicator/Cargo.toml
+++ b/rust/kafka-deduplicator/Cargo.toml
@@ -15,7 +15,8 @@ axum = { workspace = true }
 bincode = { version = "2.0.1", features = ["serde"] }
 bytesize = "1.3"
 chrono = { workspace = true }
-common-profiler = { path = "../common/profiler" }
+common-alloc = { path = "../common/alloc" }
+common-continuous-profiling = { path = "../common/continuous_profiling" }
 common-kafka = { path = "../common/kafka" }
 common-types = { path = "../common/types" }
 dashmap = "6.1"
