Checkpoint with TS wasm support before moving to commonJS

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
         "@monaco-editor/react": "4.7.0",
         "@posthog/docs-onboarding": "workspace:*",
         "@posthog/esbuilder": "workspace:*",
+        "@posthog/hogql-parser": "link:../common/hogql_parser",
         "@posthog/hogvm": "workspace:*",
         "@posthog/icons": "*",
         "@posthog/plugin-scaffold": "^1.4.4",
