--- a/frontend/package.json
+++ b/frontend/package.json
@@ -188,6 +188,7 @@
         "mathjax-full": "3.2.2",
         "md5": "^2.3.0",
         "mdast-util-find-and-replace": "^3.0.2",
+        "modern-screenshot": "^4.6.7",
         "monaco-editor": "^0.55.1",
         "natural-orderby": "^3.0.2",
         "openai": "^4.81.0",
