test: skip secret-dependent tests on external contributor PRs

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,5 +11,6 @@ markers =
     clickhouse_only
     skip_on_multitenancy
     async_migrations
+    requires_secrets: test needs internal secrets or infra and is skipped on external PRs
 
 asyncio_mode = auto
