Moved to commonJS checkpoint

--- a/common/hogql_parser/CMakeLists.txt
+++ b/common/hogql_parser/CMakeLists.txt
@@ -17,7 +17,7 @@ if(EMSCRIPTEN)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXPORT_NAME='createHogQLParser'")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s ALLOW_MEMORY_GROWTH=1")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXPORTED_RUNTIME_METHODS=['ccall','cwrap']")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXPORT_ES6=1")
+    # Removed -s EXPORT_ES6=1 to generate CommonJS output for Jest compatibility
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --bind")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s DISABLE_EXCEPTION_CATCHING=0")
